--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,10 @@
 body {
     background-color: rgb(255, 255, 165);
+    background-image: url(background.jpg);
+    background-size: cover;
+    color: white;
+    font-family: monospace;
+    font-size: 1.2em;
 }
 
 .image{
