--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
     background-color: rgb(255, 255, 165);
 }
 
-.image{
+.image {
     border: 5px solid green;
     border-radius: 10px;
     height: 400px;
@@ -16,4 +16,13 @@ body {
     padding: 5px;
     border-radius: 5px;
     box-shadow: 2px 3px #888888;
+}
+
+
+/* cambios al link
+
+
+*/
+#link {
+    color: greenyellow;
 }
