--- a/styles.css
+++ b/styles.css
@@ -10,9 +10,10 @@ body {
 }
 
 .image {
-    border: 5px solid green;
+    border: 1px solid white;
     border-radius: 10px;
     height: 400px;
+    box-shadow: 2px 2px 10px white;
 }
 
 .link-button {
@@ -25,8 +26,11 @@ body {
     box-shadow: 2px 3px #888888;
 }
 
-iframe {
-    padding: 15px;
+#video {
+    border: white solid 1px;
+    border-radius: 10px;
+    margin: 10px;
+    box-shadow: 2px 2px 10px white;
 }
 
 /* cambios al link
@@ -35,6 +39,8 @@ iframe {
 */
 #link {
     color: greenyellow;
+    transition: 0.5s;
+    text-decoration: none;
 
 }
 
