--- a/11.3 buscador-de-galaxias/styles.css
+++ b/11.3 buscador-de-galaxias/styles.css
@@ -20,10 +20,9 @@ header {
     padding: 5px;
 }
 
-nav {
+.search-bar {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    justify-content: center;
 }
 
 nav input {
@@ -32,22 +31,24 @@ nav input {
     border-radius: 5px;
     width: 70%;
     max-width: 300px;
-}
-
-nav button {
-    background-color: #333;
-    color: white;
-    border: none;
-    padding: 5px 10px;
-    border-radius: 5px;
-    cursor: pointer;
-    align-items: center;
+    margin-right: 0;
 }
 
 main {
     padding: 20px;
 }
 
+#buttonBusqueda {
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    margin-right: 10px;
+}
+
+#clearBusqueda {
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+
+}
 
 #container {
     display: grid;
@@ -64,7 +65,7 @@ main {
 
 .result img {
     max-width: 100%;
-   
+
 }
 
 
@@ -75,15 +76,3 @@ h2 {
 p {
     margin-top: 5px;
 }
-
-.buttonBusqueda {
-    background-color: white;
-    color: black;
-}
-
-.buttonBusqueda:hover {
-    background-color: rgba(255, 255, 255, 0.21);
-    border-color: white;
-    border-width: 5px;
-}
-
