--- a/14.2-JAPFLIX/css/style.css
+++ b/14.2-JAPFLIX/css/style.css
@@ -1,3 +1,7 @@
+body {
+    background: linear-gradient(-120deg, #e50914, #221f1f, #f5f5f1);
+}
+
 .img-card-fit {
     object-fit: cover;
     width: 100%;
@@ -25,6 +29,8 @@ main {
 
 .offcanvas-top {
     height: fit-content;
+    background-color: #485461;
+    background-image: linear-gradient(315deg, #485461 0%, #28313b 74%);
 }
 
 a {
