--- a/14.2-JAPFLIX/css/style.css
+++ b/14.2-JAPFLIX/css/style.css
@@ -17,6 +17,11 @@ body {
 li.list-group-item {
     background-color: black;
     color: white;
+    border: 1px solid rgb(255, 255, 255);
+}
+p{
+    padding: 0;
+    margin: 0;
 }
 
 main {
@@ -33,15 +38,20 @@ main {
     background-image: linear-gradient(315deg, #485461 0%, #28313b 74%);
 }
 
-a {
-    float: right;
+button.btn.btn-secondary.dropdown-toggle{
+    margin: 50px auto;
 }
 
-div.dropdown-toggle {
+div.dropdown{
+    display: flex;
+}
+
+a{
     float: right;
 }
 
 .btn-close {
     float: right;
-    margin-right: 15px;
+    margin: 15px;
+    background-color: white;
 }
