--- a/15-carrito/css/styles.css
+++ b/15-carrito/css/styles.css
@@ -25,7 +25,7 @@ table {
 }
 
 .dropdown-menu.show {
-    width: 500px;
+    width: 400px;
     padding: 30px;
     /* Alto del elemento */
     overflow-y: auto;
@@ -46,5 +46,9 @@ table {
 }
 
 th {
-    padding-left: 30px;
+    padding-left: 5px;
+}
+th.quantity{
+    padding-left: 15px !important;
+    padding-right: 12px !important;
 }
